--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/three": "^0.169.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.7.4",
@@ -32,4 +33,3 @@
     "typescript": "^5.6.3"
   }
 }
-
