--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@ BASE_URL="http://localhost:3000"
 STORAGE_DIR="/app/storage"
 COST_PER_CM3="0.30"
 FIXED_FEE_USD="1.00"
-
+ADMIN_EMAIL="admin@example.com"
+ADMIN_PASSWORD="change-me-please"
+ADMIN_NAME="Admin"
