--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   db:
     image: postgres:15
@@ -18,12 +17,15 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/makerworks?schema=public
-      JWT_SECRET: supersecret-change-me
-      BASE_URL: http://localhost:3000
-      STORAGE_DIR: /app/storage
-      COST_PER_CM3: "0.30"
-      FIXED_FEE_USD: "1.00"
+      DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:postgres@db:5432/makerworks?schema=public}
+      JWT_SECRET: ${JWT_SECRET:-supersecret-change-me}
+      BASE_URL: ${BASE_URL:-http://localhost:3000}
+      STORAGE_DIR: ${STORAGE_DIR:-/app/storage}
+      COST_PER_CM3: ${COST_PER_CM3:-0.30}
+      FIXED_FEE_USD: ${FIXED_FEE_USD:-1.00}
+      ADMIN_EMAIL: ${ADMIN_EMAIL}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      ADMIN_NAME: ${ADMIN_NAME:-Admin}
     ports:
       - "3000:3000"
     volumes:
@@ -32,4 +34,3 @@ services:
 volumes:
   db_data:
   storage:
-
