--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "jszip": "^3.10.1",
     "sharp": "^0.33.4",
     "three": "^0.169.0",
     "zxcvbn": "^4.4.2",
