--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,16 @@ BASE_URL="http://localhost:3000"
 STORAGE_DIR="/app/storage"
 COST_PER_CM3="0.30"
 FIXED_FEE_USD="1.00"
+# Currency settings (USD or CAD)
+# Server-side pricing logic uses CURRENCY; client display reads NEXT_PUBLIC_CURRENCY
+NEXT_PUBLIC_CURRENCY="USD"
+CURRENCY="USD"
+# Optional CAD-specific overrides when CURRENCY=CAD (fall back to USD values if unset)
+# COST_PER_CM3_CAD="0.30"
+# FIXED_FEE_CAD="1.00"
+# LABOR_PER_HOUR_CAD="0"
+# ENERGY_CAD_PER_HOUR="0"
+# MINIMUM_PRICE_CAD="0"
 ADMIN_EMAIL="admin@example.com"
 ADMIN_PASSWORD="change-me-please"
 ADMIN_NAME="Admin"
