--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ CURRENCY="USD"
 ADMIN_EMAIL="admin@example.com"
 ADMIN_PASSWORD="change-me-please"
 ADMIN_NAME="Admin"
+
+# Discord announcements (optional)
+DISCORD_BOT_TOKEN="
+DISCORD_CHANNEL_ID="
+
