--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ FIXED_FEE_USD="1.00"
 # Server-side pricing logic uses CURRENCY; client display reads NEXT_PUBLIC_CURRENCY
 NEXT_PUBLIC_CURRENCY="USD"
 CURRENCY="USD"
+# Amazon Associates tracking ID used for the /gear referral page
+NEXT_PUBLIC_AMAZON_TAG="makerworks-20"
 # Optional CAD-specific overrides when CURRENCY=CAD (fall back to USD values if unset)
 # COST_PER_CM3_CAD="0.30"
 # FIXED_FEE_CAD="1.00"
