--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,8 @@ FIXED_FEE_USD="1.00"
 NEXT_PUBLIC_CURRENCY="USD"
 CURRENCY="USD"
 # Amazon Associates tracking ID used for the /gear referral page
-NEXT_PUBLIC_AMAZON_TAG="makerworks-20"
+NEXT_PUBLIC_AMAZON_TAG="makerworks20-20"
+NEXT_PUBLIC_AMAZON_DOMAIN="amazon.ca"
 # Optional CAD-specific overrides when CURRENCY=CAD (fall back to USD values if unset)
 # COST_PER_CM3_CAD="0.30"
 # FIXED_FEE_CAD="1.00"
