--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ DATABASE_URL="postgresql://postgres:postgres@db:5432/makerworks?schema=public"
 JWT_SECRET="replace-with-a-strong-secret"
 BASE_URL="http://localhost:3000"
 STORAGE_DIR="/app/storage"
-COST_PER_CM3="0.30"
-FIXED_FEE_USD="1.00"
+PLA_PRICE_PER_KG_USD="25.00"
+PETG_PRICE_PER_KG_USD="28.00"
 # Currency settings (USD or CAD)
 # Server-side pricing logic uses CURRENCY; client display reads NEXT_PUBLIC_CURRENCY
 NEXT_PUBLIC_CURRENCY="USD"
@@ -12,8 +12,8 @@ CURRENCY="USD"
 NEXT_PUBLIC_AMAZON_TAG="makerworks20-20"
 NEXT_PUBLIC_AMAZON_DOMAIN="amazon.ca"
 # Optional CAD-specific overrides when CURRENCY=CAD (fall back to USD values if unset)
-# COST_PER_CM3_CAD="0.30"
-# FIXED_FEE_CAD="1.00"
+# PLA_PRICE_PER_KG_CAD="30.00"
+# PETG_PRICE_PER_KG_CAD="34.00"
 # LABOR_PER_HOUR_CAD="0"
 # ENERGY_CAD_PER_HOUR="0"
 # MINIMUM_PRICE_CAD="0"
