--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,10 @@ services:
       STORAGE_DIR: ${STORAGE_DIR:-/app/storage}
       # In local Docker (HTTP), do not mark cookies as Secure
       COOKIE_SECURE: ${COOKIE_SECURE:-false}
-      COST_PER_CM3: ${COST_PER_CM3:-0.30}
-      FIXED_FEE_USD: ${FIXED_FEE_USD:-1.00}
+      PLA_PRICE_PER_KG_USD: ${PLA_PRICE_PER_KG_USD:-25.00}
+      PETG_PRICE_PER_KG_USD: ${PETG_PRICE_PER_KG_USD:-28.00}
+      PLA_PRICE_PER_KG_CAD: ${PLA_PRICE_PER_KG_CAD:-30.00}
+      PETG_PRICE_PER_KG_CAD: ${PETG_PRICE_PER_KG_CAD:-34.00}
       # Currency configuration (USD or CAD). For client-side display use NEXT_PUBLIC_CURRENCY as well.
       CURRENCY: ${CURRENCY:-USD}
       NEXT_PUBLIC_CURRENCY: ${NEXT_PUBLIC_CURRENCY:-USD}
