added stripe checkout

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       PETG_PRICE_PER_KG_USD: ${PETG_PRICE_PER_KG_USD:-28.00}
       PLA_PRICE_PER_KG_CAD: ${PLA_PRICE_PER_KG_CAD:-30.00}
       PETG_PRICE_PER_KG_CAD: ${PETG_PRICE_PER_KG_CAD:-34.00}
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY:-}
+      NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY: ${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY:-}
       # Currency configuration (USD or CAD). For client-side display use NEXT_PUBLIC_CURRENCY as well.
       CURRENCY: ${CURRENCY:-USD}
       NEXT_PUBLIC_CURRENCY: ${NEXT_PUBLIC_CURRENCY:-USD}
