--- a/package.json
+++ b/package.json
@@ -13,24 +13,27 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.4.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "next": "^14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "jszip": "^3.10.1",
     "sharp": "^0.33.4",
+    "stripe": "^19.3.1",
     "three": "^0.169.0",
-    "zxcvbn": "^4.4.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@types/zxcvbn": "^4.4.4",
-    "@types/three": "^0.169.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.5",
+    "@types/three": "^0.169.0",
+    "@types/zxcvbn": "^4.4.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "prisma": "^5.18.0",
