--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ BASE_URL="http://localhost:3000"
 STORAGE_DIR="/app/storage"
 PLA_PRICE_PER_KG_USD="25.00"
 PETG_PRICE_PER_KG_USD="28.00"
+STRIPE_SECRET_KEY=""
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
 # Currency settings (USD or CAD)
 # Server-side pricing logic uses CURRENCY; client display reads NEXT_PUBLIC_CURRENCY
 NEXT_PUBLIC_CURRENCY="USD"
