--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ BASE_URL="http://localhost:3000"
 STORAGE_DIR="/app/storage"
 PLA_PRICE_PER_KG_USD="25.00"
 PETG_PRICE_PER_KG_USD="28.00"
+NEXT_PUBLIC_PLA_PRICE_PER_KG="25.00"
+NEXT_PUBLIC_PETG_PRICE_PER_KG="28.00"
+COLOR_SURCHARGE_RATE="0.05"
+NEXT_PUBLIC_COLOR_SURCHARGE_RATE="0.05"
 STRIPE_SECRET_KEY=""
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
 # Currency settings (USD or CAD)
