--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - db_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - makerworks-net
 
   web:
     build: .
@@ -28,6 +30,10 @@ services:
       PETG_PRICE_PER_KG_USD: ${PETG_PRICE_PER_KG_USD:-28.00}
       PLA_PRICE_PER_KG_CAD: ${PLA_PRICE_PER_KG_CAD:-30.00}
       PETG_PRICE_PER_KG_CAD: ${PETG_PRICE_PER_KG_CAD:-34.00}
+      NEXT_PUBLIC_PLA_PRICE_PER_KG: ${NEXT_PUBLIC_PLA_PRICE_PER_KG:-25.00}
+      NEXT_PUBLIC_PETG_PRICE_PER_KG: ${NEXT_PUBLIC_PETG_PRICE_PER_KG:-28.00}
+      COLOR_SURCHARGE_RATE: ${COLOR_SURCHARGE_RATE:-0.05}
+      NEXT_PUBLIC_COLOR_SURCHARGE_RATE: ${NEXT_PUBLIC_COLOR_SURCHARGE_RATE:-0.05}
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY:-}
       NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY: ${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY:-}
       # Currency configuration (USD or CAD). For client-side display use NEXT_PUBLIC_CURRENCY as well.
@@ -43,7 +49,13 @@ services:
     volumes:
       # Map host storage folder to container STORAGE_DIR
       - ./storage:/app/storage
+    networks:
+      - makerworks-net
 
 volumes:
   db_data:
+
+networks:
+  makerworks-net:
+    driver: bridge
 
