--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/react-stripe-js": "^5.3.0",
     "@stripe/stripe-js": "^8.4.0",
     "bcryptjs": "^2.4.3",
+    "heic-convert": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "next": "^14.2.11",
