--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ COLOR_SURCHARGE_RATE="0.05"
 NEXT_PUBLIC_COLOR_SURCHARGE_RATE="0.05"
 STRIPE_SECRET_KEY=""
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
+# Optional OrderWorks webhook settings
+# Set ORDERWORKS_WEBHOOK_URL to enable automatic job submissions
+ORDERWORKS_WEBHOOK_URL=""
+ORDERWORKS_WEBHOOK_SECRET=""
 # Currency settings (USD or CAD)
 # Server-side pricing logic uses CURRENCY; client display reads NEXT_PUBLIC_CURRENCY
 NEXT_PUBLIC_CURRENCY="USD"
