--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,10 @@ NEXT_PUBLIC_AMAZON_DOMAIN="amazon.ca"
 # LABOR_PER_HOUR_CAD="0"
 # ENERGY_CAD_PER_HOUR="0"
 # MINIMUM_PRICE_CAD="0"
+# Optional seasonal theming.
+# Set to christmas, halloween, or easter to enable matching UI flourishes.
+HOLIDAY_THEME=""
+NEXT_PUBLIC_HOLIDAY_THEME=""
 ADMIN_EMAIL="admin@example.com"
 ADMIN_PASSWORD="change-me-please"
 ADMIN_NAME="Admin"
