added email contact

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ CURRENCY="USD"
 # Amazon Associates tracking ID used for the /gear referral page
 NEXT_PUBLIC_AMAZON_TAG="makerworks20-20"
 NEXT_PUBLIC_AMAZON_DOMAIN="amazon.ca"
+NEXT_PUBLIC_CONTACT_EMAIL="info@makerworks.app"
 # Optional CAD-specific overrides when CURRENCY=CAD (fall back to USD values if unset)
 # PLA_PRICE_PER_KG_CAD="30.00"
 # PETG_PRICE_PER_KG_CAD="34.00"
