--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@stripe/react-stripe-js": "^5.3.0",
     "@stripe/stripe-js": "^8.4.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^17.2.3",
     "exifr": "^7.1.3",
+    "fast-xml-parser": "^5.3.2",
     "heic-convert": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
