--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ DATABASE_URL="postgresql://postgres:postgres@db:5432/makerworks?schema=public"
 JWT_SECRET="replace-with-a-strong-secret"
 BASE_URL="http://localhost:3000"
 STORAGE_DIR="/app/storage"
+PRINTER_PROFILE="BAMBU_X1C"
+# Override if your electricity rate differs from the ~$0.14/kWh default.
+# PRINTER_ELECTRIC_RATE_PER_KWH="0.14"
 PLA_PRICE_PER_KG_USD="25.00"
 PETG_PRICE_PER_KG_USD="28.00"
 NEXT_PUBLIC_PLA_PRICE_PER_KG="25.00"
