email confirmation login

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,14 @@ CURRENCY="USD"
 NEXT_PUBLIC_AMAZON_TAG="makerworks20-20"
 NEXT_PUBLIC_AMAZON_DOMAIN="amazon.ca"
 NEXT_PUBLIC_CONTACT_EMAIL="info@makerworks.app"
+# Email delivery (SMTP settings mirror the OrderWorks app defaults)
+# SMTP_HOST="smtp.gmail.com"
+# SMTP_PORT="587"
+# SMTP_USER="receipts.makerworks@gmail.com"
+# SMTP_PASSWORD=""
+# SMTP_SECURE="false"
+# RECEIPT_FROM_EMAIL="MakerWorks Receipts <receipts.makerworks@gmail.com>"
+# RECEIPT_REPLY_TO_EMAIL="MakerWorks <info@makerworks.app>"
 # Optional CAD-specific overrides when CURRENCY=CAD (fall back to USD values if unset)
 # PLA_PRICE_PER_KG_CAD="30.00"
 # PETG_PRICE_PER_KG_CAD="34.00"
