--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,13 @@ services:
       NEXT_PUBLIC_PETG_PRICE_PER_KG: ${NEXT_PUBLIC_PETG_PRICE_PER_KG:-28.00}
       COLOR_SURCHARGE_RATE: ${COLOR_SURCHARGE_RATE:-0.05}
       NEXT_PUBLIC_COLOR_SURCHARGE_RATE: ${NEXT_PUBLIC_COLOR_SURCHARGE_RATE:-0.05}
+      SMTP_HOST: ${SMTP_HOST:-}
+      SMTP_PORT: ${SMTP_PORT:-}
+      SMTP_USER: ${SMTP_USER:-}
+      SMTP_PASSWORD: ${SMTP_PASSWORD:-}
+      SMTP_SECURE: ${SMTP_SECURE:-false}
+      RECEIPT_FROM_EMAIL: ${RECEIPT_FROM_EMAIL:-}
+      RECEIPT_REPLY_TO_EMAIL: ${RECEIPT_REPLY_TO_EMAIL:-}
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY:-}
       NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY: ${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY:-}
       # Currency configuration (USD or CAD). For client-side display use NEXT_PUBLIC_CURRENCY as well.
