--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "next": "^14.2.11",
+    "nodemailer": "^7.0.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.33.4",
@@ -37,6 +38,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.7.4",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^18.3.5",
     "@types/three": "^0.169.0",
     "@types/zxcvbn": "^4.4.4",
