model manager list added

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,8 @@ NEXT_PUBLIC_CONTACT_EMAIL="info@makerworks.app"
 # PETG_PRICE_PER_KG_CAD="34.00"
 # ENERGY_CAD_PER_HOUR="0"
 # MINIMUM_PRICE_CAD="0"
+# EXTRA_HOURLY_AFTER_FIRST_USD="0"
+# EXTRA_HOURLY_AFTER_FIRST_CAD="0"
 # Optional seasonal theming.
 # Set to christmas, halloween, or easter to enable matching UI flourishes.
 HOLIDAY_THEME=""
