discord admin notifications added

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,9 @@ ADMIN_PASSWORD="change-me-please"
 ADMIN_NAME="Admin"
 
 # Discord announcements (optional)
-DISCORD_BOT_TOKEN="
-DISCORD_CHANNEL_ID="
+DISCORD_BOT_TOKEN=""
+DISCORD_CHANNEL_ID=""
+# Admin Discord notifications (optional, separate channel)
+DISCORD_ADMIN_BOT_TOKEN=""
+DISCORD_ADMIN_CHANNEL_ID=""
 
