--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,9 +48,11 @@ services:
       NEXT_PUBLIC_CURRENCY: ${NEXT_PUBLIC_CURRENCY:-USD}
       ADMIN_EMAIL: ${ADMIN_EMAIL}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
-      ADMIN_NAME: 
-      DISCORD_BOT_TOKEN: 
-      DISCORD_CHANNEL_ID: 
+      ADMIN_NAME: ${ADMIN_NAME:-Admin}
+      DISCORD_BOT_TOKEN: ${DISCORD_BOT_TOKEN:-}
+      DISCORD_CHANNEL_ID: ${DISCORD_CHANNEL_ID:-}
+      DISCORD_ADMIN_BOT_TOKEN: ${DISCORD_ADMIN_BOT_TOKEN:-}
+      DISCORD_ADMIN_CHANNEL_ID: ${DISCORD_ADMIN_CHANNEL_ID:-}
     ports:
       - "3000:3000"
     volumes:
