added branding name change

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,11 @@ CURRENCY="USD"
 NEXT_PUBLIC_AMAZON_TAG="makerworks20-20"
 NEXT_PUBLIC_AMAZON_DOMAIN="amazon.ca"
 NEXT_PUBLIC_CONTACT_EMAIL="info@makerworks.app"
+# Branding (set the display name/version to re-theme the UI)
+NEXT_PUBLIC_BRAND_NAME="MakerWorks"
+NEXT_PUBLIC_BRAND_VERSION="v2"
+NEXT_PUBLIC_BRAND_LAB_NAME="MakerWorks lab"
+NEXT_PUBLIC_BRAND_HANDLE="@makerworks"
 # Email delivery (SMTP settings mirror the OrderWorks app defaults)
 # SMTP_HOST="smtp.gmail.com"
 # SMTP_PORT="587"
