--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,11 @@ services:
       NEXT_PUBLIC_PETG_PRICE_PER_KG: ${NEXT_PUBLIC_PETG_PRICE_PER_KG:-28.00}
       COLOR_SURCHARGE_RATE: ${COLOR_SURCHARGE_RATE:-0.05}
       NEXT_PUBLIC_COLOR_SURCHARGE_RATE: ${NEXT_PUBLIC_COLOR_SURCHARGE_RATE:-0.05}
+      # Branding (override to re-theme the storefront)
+      NEXT_PUBLIC_BRAND_NAME: ${NEXT_PUBLIC_BRAND_NAME:-MakerWorks}
+      NEXT_PUBLIC_BRAND_VERSION: ${NEXT_PUBLIC_BRAND_VERSION:-v2}
+      NEXT_PUBLIC_BRAND_LAB_NAME: ${NEXT_PUBLIC_BRAND_LAB_NAME:-MakerWorks lab}
+      NEXT_PUBLIC_BRAND_HANDLE: ${NEXT_PUBLIC_BRAND_HANDLE:-@makerworks}
       SMTP_HOST: ${SMTP_HOST:-}
       SMTP_PORT: ${SMTP_PORT:-}
       SMTP_USER: ${SMTP_USER:-}
