--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ CURRENCY="USD"
 # Amazon Associates tracking ID used for the /gear referral page
 NEXT_PUBLIC_AMAZON_TAG="makerworks20-20"
 NEXT_PUBLIC_AMAZON_DOMAIN="amazon.ca"
-NEXT_PUBLIC_CONTACT_EMAIL="info@makerworks.app"
+NEXT_PUBLIC_CONTACT_EMAIL="info@example.com"
 # Branding (set the display name/version to re-theme the UI)
 NEXT_PUBLIC_BRAND_NAME="MakerWorks"
 NEXT_PUBLIC_BRAND_VERSION="v2"
