added printer profiles

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ DATABASE_URL="postgresql://postgres:postgres@db:5432/makerworks?schema=public"
 JWT_SECRET="replace-with-a-strong-secret"
 BASE_URL="http://localhost:3000"
 STORAGE_DIR="/app/storage"
+# Options: BAMBU_X1C, BAMBU_P1S, PRUSA_MK4, PRUSA_MK3S, CREALITY_K1_MAX, CREALITY_ENDER3_V2, ANYCUBIC_KOBRA2, GENERIC_FDM
 PRINTER_PROFILE="BAMBU_X1C"
 # Override if your electricity rate differs from the ~$0.14/kWh default.
 # PRINTER_ELECTRIC_RATE_PER_KWH="0.14"
